Send verification code for change password completed
